# vecrender

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vecrender_domaintrianglemarker.cpp  vecrender_domaintrianglemarker.h  vecrender_localtriangulator.cpp  vecrender_localtriangulator.h  vecrender_mathutils.cpp  vecrender_mathutils.h  vecrender_path.cpp  vecrender_path.h  vecrender_triangulationutils.cpp  vecrender_triangulationutils.h  vecrender_triangulator.cpp  vecrender_triangulator.h
